--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       MYSQL_USER: shinobi
       MYSQL_PASSWORD: shinobi
     volumes:
-      - mariadb_data:/var/lib/mysql
+      - mariadb_data_shinobi:/var/lib/mysql
 
   shinobi:
     image: shinobisystems/shinobi:latest
@@ -26,7 +26,7 @@ services:
       - shinobi_videos:/home/Shinobi/videos
 
 volumes:
-  mariadb_data:
+  mariadb_data_shinobi:
   shinobi_config:
   shinobi_custom:
   shinobi_videos:
