--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
       MYSQL_DATABASE: ccio
       MYSQL_USER: shinobi
       MYSQL_PASSWORD: shinobi
+    command: >
+      --character-set-server=utf8mb4
+      --collation-server=utf8mb4_unicode_ci
+      --default-authentication-plugin=mysql_native_password
     volumes:
       - mariadb_data_shinobi:/var/lib/mysql
 
