--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
-  mariadb:
-    image: mariadb:10.4
+  mysql:
+    image: mysql:5.7
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: shinobi
@@ -17,13 +17,14 @@ services:
   shinobi:
     image: shinobisystems/shinobi:latest
     depends_on:
-      - mariadb
+      - mysql
     restart: always
     environment:
-      MYSQL_HOST: mariadb
+      MYSQL_HOST: mysql
       MYSQL_USER: shinobi
       MYSQL_PASSWORD: shinobi
       MYSQL_DATABASE: ccio
+      MYSQL_PORT: 3306
     volumes:
       - shinobi_config:/config
       - shinobi_custom:/custom
