--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   mysql:
     image: mysql:5.7
@@ -12,7 +14,7 @@ services:
       --collation-server=utf8mb4_unicode_ci
       --default-authentication-plugin=mysql_native_password
     volumes:
-      - mariadb_data_shinobi:/var/lib/mysql
+      - mysql_data_shinobi:/var/lib/mysql
 
   shinobi:
     image: shinobisystems/shinobi:latest
@@ -31,7 +33,7 @@ services:
       - shinobi_videos:/home/Shinobi/videos
 
 volumes:
-  mariadb_data_shinobi:
+  mysql_data_shinobi:
   shinobi_config:
   shinobi_custom:
   shinobi_videos:
